; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_ucode.c_xcpu_update.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_ucode.c_xcpu_update.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KERN_SUCCESS = common dso_local global i64 0, align 8
@cpu_update = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @xcpu_update to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xcpu_update() #0 {
  %1 = call i64 (...) @register_locks()
  %2 = load i64, i64* @KERN_SUCCESS, align 8
  %3 = icmp ne i64 %1, %2
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %9

5:                                                ; preds = %0
  %6 = load i32, i32* @cpu_update, align 4
  %7 = call i32 @mp_broadcast(i32 %6, i32* null)
  %8 = call i32 (...) @ucode_cpuid_set_info()
  br label %9

9:                                                ; preds = %5, %4
  ret void
}

declare dso_local i64 @register_locks(...) #1

declare dso_local i32 @mp_broadcast(i32, i32*) #1

declare dso_local i32 @ucode_cpuid_set_info(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
